<?xml version="1.0"?>
<package>
  <name>tdle</name>
  <version>1.0.0</version>
  <description>A ROS package for exploration with 2d lidar.</description>

  <author>Sean Zhao</author>
  <maintainer email="cnzhaoxy@gmail.com">Sean Zhao</maintainer>

  <license>MIT</license>
  <url>https://github.com/SeanZsya/tdle</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${}/models"/>
  </export>

</package>
